--- a/index.html
+++ b/index.html
@@ -1,22 +1,50 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Norhog</title>
+    <link rel="icon" href="favicon.ico" />
+  </head>
+  <body>
     <header>
-        <h1>Norhog</h1>
-        <h3>History Trivia</h3>
-        <h6>about</h6>
-        <ul>
-            <li>home</li>
-            <li>profile</li>
-            <li>random quiz</li>
-            <li>leaderboard</li>
-        </ul>
+      <h1>Norhog<sup>&reg;</sup></h1>
+
+      <nav>
+        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
+        <menu>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="play.html">Play</a></li>
+          <li><a href="scores.html">Scores</a></li>
+          <li><a href="about.html">About</a></li>
+        </menu>
+      </nav>
+
+      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
+      <hr />
     </header>
-    <body>
-        <h2>Quizzes</h2>
-        <ul>
-            <li>The French Revolution</li>
-        </ul>
-    </body>
+
+    <main>
+      <h1>Welcome to Simon</h1>
+      <form method="get" action="play.html">
+        <div>
+          <span>@</span>
+          <input type="text" placeholder="your@email.com" />
+        </div>
+        <div>
+          <span>🔒</span>
+          <input type="password" placeholder="password" />
+        </div>
+        <button type="submit">Login</button>
+        <button type="submit">Create</button>
+      </form>
+    </main>
+
     <footer>
-        <a href="https://github.com/RyGuy907/startup">GitHub</a>
+      <hr />
+      <span class="text-reset">Author Name(s)</span>
+      <br />
+      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
     </footer>
+  </body>
 </html>
