--- a/index.html
+++ b/index.html
@@ -4,47 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Norhog</title>
-    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <header>
       <h1>Norhog<sup>&reg;</sup></h1>
+      <h3>Welcome</h3>
 
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">Home</a></li>
-          <li><a href="play.html">Play</a></li>
-          <li><a href="scores.html">Scores</a></li>
-          <li><a href="about.html">About</a></li>
+          <li>Random Quiz</li>
+          <li><a href="leaderboard.html">Leaderboard</a></li>
+          <li><a href="profile.html">Profile</a></li>
         </menu>
       </nav>
 
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
+      
       <hr />
     </header>
-
     <main>
-      <h1>Welcome to Simon</h1>
-      <form method="get" action="play.html">
-        <div>
-          <span>@</span>
-          <input type="text" placeholder="your@email.com" />
-        </div>
-        <div>
-          <span>🔒</span>
-          <input type="password" placeholder="password" />
-        </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-      </form>
+      <h1>Quizzes</h1>
+        <menu>
+          <li><a href="FrenchRevQuiz.html">The French Revolution</a></li>
+          <li>The Seven Years' War</li>
+          <li>Napoleon Bonaparte</li>
+          <li>Monarchs of France</li>
+          <li>The American Revolution</li>
+          <li>The Punic Wars</li>
+          <li>The Gilded Age</li>
+          <li>Tsarist Russia</li>
+        </menu>
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
       <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <a href="https://github.com/RyGuy907/startup">GitHub</a>
     </footer>
   </body>
 </html>
