--- a/FrenchRevQuiz.html
+++ b/FrenchRevQuiz.html
@@ -2,105 +2,74 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simon</title>
-    <link rel="icon" href="favicon.ico" />
+    <title>Norhog</title>
   </head>
   <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Simon<sup>&reg;</sup></h1>
-
-      <!-- Navigation elements -->
+      <h1>Norhog<sup>&reg;</sup></h1>
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">Home</a></li>
-          <li><a href="play.html">Play</a></li>
-          <li><a href="scores.html">Scores</a></li>
-          <li><a href="about.html">About</a></li>
+          <li>Random Quiz</li>
+          <li><a href="leaderboard.html">Leaderboard</a></li>
+          <li><a href="profile.html">Profile</a></li>
         </menu>
       </nav>
-
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
+      <h4>Recommended Quizzes</h4>
+      <ul class="Recommended">
+        <li class="recquiz">The Seven Years' War</li>
+        <li class="recquiz">Napoleon Bonaparte</li>
+        <li class="recquiz">Monarchs of France</li>
+        <li class="recquiz">The American Revolution</li>
+      </ul>
+      
       <hr />
     </header>
 
     <main>
-      <div class="players">
-        Player:
-        <span class="player-name">Mystery player</span>
-      </div>
-      <ul class="notification">
-        <li class="player-name">Tim started a new game</li>
-        <li class="player-name">Ada started a new game</li>
-        <li class="player-name">Tim scored 337</li>
-      </ul>
-
-      <!-- More formatting with old style HTML -->
+      <h2>The French Revolution</h2>
+      <img src="https://cdn.britannica.com/98/90498-050-5527D0C1/prison-event-Bastille-French-Revolution-engraving-July-14-1789.jpg?w=300" alt="Storming of the Bastille">
+      <p>Can you answer these questions about the French Revolution?</p>
+        <fieldset class="difficulty">
+          <label for="radio1">Easy</label>
+          <input type="radio" id="radio1" name="varRadio" value="radio1" checked />
+          <label for="radio2">Medium</label>
+          <input type="radio" id="radio2" name="varRadio" value="radio2" />
+          <label for="radio3">Hard</label>
+          <input type="radio" id="radio3" name="varRadio" value="radio3" />
+        </fieldset>
       <br />
 
       <div>
-        <label for="count">Score</label>
-        <input type="text" id="count" value="--" readonly />
+        <label for="tbest">Best Time:</label>
+        <input type="text" id="count" value="" readonly />
       </div>
-
-      <br />
+      <div>
+        <label for="sbest">Best Score:</label>
+        <input type="text" id="count" value="" readonly />
+      </div>
+      <br>
+      <input type="text" id="timer" value="1:00" readonly />
+      <input type="text" id="score" value="/10" readonly />
+      <br>
 
       <div>
-        <button>Reset</button>
+        <button>Play</button>
       </div>
-
       <br />
-
-      <div>
-        <table>
-          <tr>
-            <td>
-              <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <!-- SVG
-                    M move <to x,y>
-                    Q quadratic curve <control point x,y> <to x,y>
-                -->
-                  <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
-                </svg>
-              </button>
-            </td>
-            <td>
-              <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <path d="M5,5 5,95 95,95 Q 95,5 5,5" fill="red" />
-                </svg>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <path d="M5,5 95,5 95,95 Q 5,95 5,5" fill="blue" />
-                </svg>
-              </button>
-            </td>
-            <td>
-              <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
-                </svg>
-              </button>
-            </td>
-          </tr>
-        </table>
-      </div>
+      <table class="easy" style="display:block">
+        <th>goony</th>
+          <tr>goon</tr>
+          <tr>goon</tr>
+        <td>goon</td>
+      </table>
+      
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
-      <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <a href="https://github.com/RyGuy907/startup">GitHub</a>
     </footer>
   </body>
 </html>
