--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <footer>
       <hr />
       <br />
+      <p>Ryan Russon</p>
       <a href="https://github.com/RyGuy907/startup">GitHub</a>
     </footer>
   </body>
