css/html updated

--- a/FrenchRevQuiz.html
+++ b/FrenchRevQuiz.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Norhog</title>
-    <style type = text/css>
-    .answer { display:none;}
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Norhog<sup>&reg;</sup></h1>
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li>Random Quiz</li>
-          <li><a href="leaderboard.html">Leaderboard</a></li>
-          <li><a href="profile.html">Profile</a></li>
-        </menu>
-      </nav>
-      <h4>Recommended Quizzes</h4>
-      <ul class="Recommended">
-        <li class="recquiz">The Seven Years' War</li>
-        <li class="recquiz">Napoleon Bonaparte</li>
-        <li class="recquiz">Monarchs of France</li>
-        <li class="recquiz">The American Revolution</li>
-      </ul>
-      
-      <hr />
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Norhog</title>
+  <link rel="stylesheet" href="quiz.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+    crossorigin="anonymous"
+  />
+</head>
+<body>
+  <header>
+    <h1>Norhog<sup>&reg;</sup></h1>
+    <nav>
+      <menu>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="">Random Quiz</a></li>
+        <li><a href="leaderboard.html">Leaderboard</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </menu>
+    </nav>
+    <hr />
+  </header>
 
-    <main>
-      <h2>The French Revolution</h2>
-      <img src="https://cdn.britannica.com/98/90498-050-5527D0C1/prison-event-Bastille-French-Revolution-engraving-July-14-1789.jpg?w=300" alt="Storming of the Bastille">
-      <p>Can you answer these questions about the French Revolution?</p>
+  <main class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>The French Revolution</h2>
+        <img src="https://cdn.britannica.com/98/90498-050-5527D0C1/prison-event-Bastille-French-Revolution-engraving-July-14-1789.jpg?w=300" alt="Storming of the Bastille" class="img-fluid">
+        <p>Can you answer these questions about the French Revolution?</p>
         <fieldset class="difficulty">
           <label for="radio1">Easy</label>
           <input type="radio" id="radio1" name="varRadio" value="radio1" checked />
@@ -42,118 +40,138 @@
           <label for="radio3">Hard</label>
           <input type="radio" id="radio3" name="varRadio" value="radio3" />
         </fieldset>
-      <br />
+        <div>
+          <label for="tbest">Best Time:</label>
+          <input type="text" id="tcount" value="" readonly />
+        </div>
+        <div>
+          <label for="sbest">Best Score:</label>
+          <input type="text" id="scount" value="" readonly />
+        </div>
+        <br>
+        <input type="text" id="timer" value="1:00" readonly />
+        <input type="text" id="score" value="/10" readonly />
+        <br>
+        <br>
+        <div>
+          <button>Play</button>
+        </div>
+        <br>
+        <div>
+          <input type="text" id="answerBox" placeholder="Answer Here..." />
+        </div>
+        <br>
+        <table class="easy" style="display:none;">
+          <tr>
+            <th class="question">Question</th>
+            <th class="answerhead">Answer</th>
+          </tr>
+          <tbody>
+            <tr>
+              <td class="question">When did the French Revolution begin?</td>
+              <td class="answer">1789</td>
+            </tr>
+          </tbody>
+        </table>
 
-      <div>
-        <label for="tbest">Best Time:</label>
-        <input type="text" id="count" value="" readonly />
-      </div>
-      <div>
-        <label for="sbest">Best Score:</label>
-        <input type="text" id="count" value="" readonly />
-      </div>
-      <br>
-      <input type="text" id="timer" value="1:00" readonly />
-      <input type="text" id="score" value="/10" readonly />
-      <br>
+        <table class="medium" style="display:block;">
+          <tr>
+            <th class="question">Question</th>
+            <th class="answerhead">Answer</th>
+          </tr>
+          <tbody>
+            <tr>
+              <td class="question">When did the French Revolution begin?</td>
+              <td class="answer">1789</td>
+            </tr>
+            <tr>
+              <td class="question">What famous prison was stormed in that year?</td>
+              <td class="answer">The Bastille</td>
+            </tr>
+            <tr>
+              <td class="question">Which assembly did the king summon?</td>
+              <td class="answer">The Estates General</td>
+            </tr>
+            <tr>
+              <td class="question">What crisis caused the assembly to be summoned?</td>
+              <td class="answer">Financial Crisis</td>
+            </tr>
+            <tr>
+              <td class="question">Which king reigned during the revolution before his death?</td>
+              <td class="answer">Louis XVI</td>
+            </tr>
+            <tr>
+              <td class="question">Who was his queen?</td>
+              <td class="answer">Marie Antoinette</td>
+            </tr>
+            <tr>
+              <td class="question">What was the famous radical revolutionary group?</td>
+              <td class="answer">The Jacobins</td>
+            </tr>
+            <tr>
+              <td class="question">Who led that group during the "Reign of Terror"?</td>
+              <td class="answer">Maximilien Robespierre</td>
+            </tr>
+            <tr>
+              <td class="question">What device was most commonly used for execution?</td>
+              <td class="answer">The Guillotine</td>
+            </tr>
+            <tr>
+              <td class="question">What was the Catholic Church replaced with?</td>
+              <td class="answer">The Cult of Reason</td>
+            </tr>
+          </tbody>
+        </table>
 
-      <div>
-        <button>Play</button>
+        <table class="hard" style="display:none;">
+          <tr>
+            <th class="question">Question</th>
+            <th class="answerhead">Answer</th>
+          </tr>
+          <tbody>
+            <tr>
+              <td class="question">When did the French Revolution begin?</td>
+              <td class="answer">1789</td>
+            </tr>
+          </tbody>
+        </table>
+        <hr />
+        <table class="comments" style="display:block;">
+          <tr>
+            <td colspan="3">
+              <input type="text" id="commentBox" placeholder="Type your comment..." />
+              <button>Comment</button>
+            </td>
+          </tr>
+          <tr>
+            <td>iNeverTouchGrass:</td>
+            <td>"erm this is so easy"</td>
+            <td>10 August 2024</td>
+          </tr>
+          <tr>
+            <td>wholesomeUser57:</td>
+            <td>"great quiz!"</td>
+            <td>18 September 2024</td>
+          </tr>
+        </table>
       </div>
-      <br>
-      <div>
-        <input type="text" id="answerBox" placeholder="Answer Here..."/>
+      <div class="col-md-4">
+        <div class="recommended-box">
+          <h4>Recommended Quizzes</h4>
+          <ul class="Recommended list-group">
+            <li class="recquiz list-group-item">The Seven Years' War</li>
+            <li class="recquiz list-group-item">Napoleon Bonaparte</li>
+            <li class="recquiz list-group-item">Monarchs of France</li>
+            <li class="recquiz list-group-item">The American Revolution</li>
+          </ul>
+        </div>
       </div>
-      <br />
-      <table class="easy" style="display:none;">
-        <tr>
-          <th class="question">Question</th>
-          <th class="answerhead">Answer</th>
-        </tr>
-        <tbody>
-        <tr>
-          <td class="question">When did the French Revolution begin?</td>
-          <td class="answer">1789</td>
-        </tr>
-        </tbody>
-      </table>
-      <table class="medium" style="display:block;">
-        <tr>
-          <th class="question">Question</th>
-          <th class="answerhead">Answer</th>
-        </tr>
-        <tbody>
-        <tr>
-          <td class="question">When did the French Revolution begin?</td>
-          <td class="answer">1789</td>
-        </tr>
-        <tr>
-          <td class="question">What famous prison was stormed in that year?</td>
-          <td class="answer">The Bastille</td>
-        </tr>
-        <tr>
-          <td class="question">Which assembly did the king summon?</td>
-          <td class="answer">The Estates General</td>
-        </tr>
-        <tr>
-          <td class="question">What crisis caused the assmebly to be summoned?</td>
-          <td class="answer">Financial Crisis</td>
-        </tr>
-        <tr>
-          <td class="question">Which king reigned during the revolution before his death?</td>
-          <td class="answer">Louis XVI</td>
-        </tr>
-        <tr>
-          <td class="question">Who was his queen?</td>
-          <td class="answer">Marie Antoinette</td>
-        </tr>
-        <tr>
-          <td class="question">What was the famous radical revolutionary group?</td>
-          <td class="answer">The Jacobins</td>
-        </tr>
-        <tr>
-          <td class="question">Who led that group during the "Reign of Terror"?</td>
-          <td class="answer">Maximilien Robespierre</td>
-        </tr>
-        <tr>
-          <td class="question">What device was most commonly used for execution?</td>
-          <td class="answer">The Guillotine</td>
-        </tr>
-        <tr></tr>
-          <td class="question">What was the Catholic Church replaced with?</td>
-          <td class="answer">The Cult of Reason</td>
-        </tr>
-      </tbody>
-      </table>
-      <table class="hard" style="display:none;"></table>
-      <tr>
-        <th class="question">Question</th>
-        <th class="answerhead">Answer</th>
-      </tr>
-      <tbody>
-      <tr>
-        <td class="question">When did the French Revolution begin?</td>
-        <td class="answer">1789</td>
-      </tr>
-      </tbody>
-    </table>  
-    </main>
-
-    <footer>
-      <hr />
-      <table class="comments" style="display:block;"> <!--comment websocket place holder-->
-        <tr><input type="text" id="commentBox" placeholder="Type your comment..."/><button>Comment</button></tr>
-        <tr>
-          <td>iNeverTouchGrass:</td>
-          <td>"erm this is so easy"</td>
-          <td>10 August 2024</td>
-        <tr>
-          <td>wholesomeUser57:</td>
-          <td>"great quiz!"</td>
-          <td>18 September 2024</td><br></tr>
-      </table>
-      <p>Ryan Russon</p>
-      <a href="https://github.com/RyGuy907/startup">GitHub</a>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer>
+    <hr />
+    <p>Ryan Russon</p>
+    <a href="https://github.com/RyGuy907/startup">GitHub</a>
+  </footer>
+</body>
 </html>
