--- a/profile.html
+++ b/profile.html
@@ -1,68 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Norhog</title>
-  </head>
-  <body>
-    <header>
-      <h1>Norhog<sup>&reg;</sup></h1>
-      <h3>Welcome</h3>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Norhog - Profile</title>
+  <link rel="stylesheet" href="profile.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+    crossorigin="anonymous"
+  />
+</head>
+<body>
+  <header>
+    <h1>Norhog<sup>&reg;</sup></h1>
+    <nav>
+      <menu>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Random Quiz</a></li>
+        <li><a href="leaderboard.html">Leaderboard</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </menu>
+    </nav>
+    <hr />
+  </header>
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li>Random Quiz</li>
-          <li><a href="leaderboard.html">Leaderboard</a></li>
-          <li><a href="profile.html">Profile</a></li>
-        </menu>
-      </nav>
+  <main class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Login or Create an Account</h2>
+        <form method="post" class="user-form">
+          <div class="mb-3">
+            <label for="email" class="form-label">E-mail:</label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="your@email.com" required>
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="password" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="button" class="btn btn-secondary">Create Account</button>
+        </form>
+        <hr />
 
-      
-      <hr />
-    </header>
+        <h2>Your Profile</h2>
+        <table class="userData table table-striped">
+          <thead>
+            <tr>
+              <th>Ranking</th>
+              <th>Username</th>
+              <th>Total Points</th>
+              <th>Account Created</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>jag_alskar_surstromming</td>
+              <td>523</td>
+              <td>May 20, 2024</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-    <main>
-      <form method="get"></form> <!-- will eventually toggle display:block; for the data table-->
-        <div>
-          <span>E-mail:</span>
-          <input type="text" placeholder="your@email.com">
+      <div class="col-md-4">
+        <div class="recommended-box">
+          <h4>Recommended Quizzes</h4>
+          <ul class="Recommended list-group">
+            <li class="recquiz list-group-item">The Seven Years' War</li>
+            <li class="recquiz list-group-item">Napoleon Bonaparte</li>
+            <li class="recquiz list-group-item">Monarchs of France</li>
+            <li class="recquiz list-group-item">The American Revolution</li>
+          </ul>
         </div>
-        <div>
-          <span>Password:</span>
-          <input type="password" placeholder="password">
-        </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-      </form>
-      <hr>
-      <h2>Your Profile</h2>
-      <table class="userData">
-        <thead>
-          <tr>
-            <th>Ranking</th>
-            <th>Username</th>
-            <th>Total Points</th>
-            <th>Account Created</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>jag_alskar_surstromming</td>
-            <td>523</td>
-            <td>May 20, 2024</td>
-          </tr>
-        </tbody>
-      </table>
-    </main>
+      </div>
+    </div>
+  </main>
 
-    <footer>
-      <hr />
-      <br />
-      <p>Ryan Russon</p>
-      <a href="https://github.com/RyGuy907/startup">GitHub</a>
-    </footer>
-  </body>
+  <footer>
+    <hr />
+    <p>Ryan Russon</p>
+    <a href="https://github.com/RyGuy907/startup">GitHub</a>
+  </footer>
+</body>
 </html>
