--- a/index.html
+++ b/index.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Norhog</title>
-    <link rel="stylesheet" href="main.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <header>
-      <h1>Norhog<sup>&reg;</sup></h1>
-      <h3>Welcome</h3>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Norhog</title>
+  <link rel="stylesheet" href="main.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+    crossorigin="anonymous"
+  />
+</head>
+<body>
+  <header>
+    <h1>Norhog<sup>&reg;</sup></h1>
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li>Random Quiz</li>
-          <li><a href="leaderboard.html">Leaderboard</a></li>
-          <li><a href="profile.html">Profile</a></li>
-        </menu>
-      </nav>
+    <nav>
+      <menu>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Random Quiz</a></li>
+        <li><a href="leaderboard.html">Leaderboard</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </menu>
+    </nav>
 
-      
-      <hr />
-    </header>
-    <main>
-      <h1>Quizzes</h1>
-        <menu>
+    <hr />
+  </header>
+
+  <main class="container">
+    <div class="row">
+      <h1>Welcome</h1>
+      <h5>Test Your Knowledge</h5>
+      <br>
+      <hr>
+      <div class="col-md-8">
+        <h2>Quizzes</h2>
+        <ul class="quiz-list">
           <li><a href="FrenchRevQuiz.html">The French Revolution</a></li>
-          <li>The Seven Years' War</li>
-          <li>Napoleon Bonaparte</li>
-          <li>Monarchs of France</li>
-          <li>The American Revolution</li>
-          <li>The Punic Wars</li>
-          <li>The Gilded Age</li>
-          <li>Tsarist Russia</li>
-        </menu>
-    </main>
+          <li><a href="#">The Seven Years' War</a></li>
+          <li><a href="#">Napoleon Bonaparte</a></li>
+          <li><a href="#">Monarchs of France</a></li>
+          <li><a href="#">The American Revolution</a></li>
+          <li><a href="#">The Punic Wars</a></li>
+          <li><a href="#">The Gilded Age</a></li>
+          <li><a href="#">Tsarist Russia</a></li>
+        </ul>
+      </div>
 
-    <footer>
-      <hr />
-      <br />
-      <p>Ryan Russon</p>
-      <a href="https://github.com/RyGuy907/startup">GitHub</a>
-    </footer>
-  </body>
+      <div class="col-md-4">
+        <div class="recommended-box">
+          <h4>Recommended Quizzes</h4>
+          <ul class="Recommended list-group">
+            <li class="recquiz list-group-item">The Seven Years' War</li>
+            <li class="recquiz list-group-item">Napoleon Bonaparte</li>
+            <li class="recquiz list-group-item">Monarchs of France</li>
+            <li class="recquiz list-group-item">The American Revolution</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <hr />
+    <p>Ryan Russon</p>
+    <a href="https://github.com/RyGuy907/startup">GitHub</a>
+  </footer>
+</body>
 </html>
