--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,66 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Norhog</title>
-  </head>
-  <body>
-    <header>
-      <h1>Norhog<sup>&reg;</sup></h1>
-      <h3>Welcome</h3>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Norhog - Leaderboard</title>
+  <link rel="stylesheet" href="leaderboard.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+    crossorigin="anonymous"
+  />
+</head>
+<body>
+  <header>
+    <h1>Norhog<sup>&reg;</sup></h1>
+    <nav>
+      <menu>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Random Quiz</a></li>
+        <li><a href="leaderboard.html">Leaderboard</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </menu>
+    </nav>
+    <hr />
+  </header>
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li>Random Quiz</li>
-          <li><a href="leaderboard.html">Leaderboard</a></li>
-          <li><a href="profile.html">Profile</a></li>
-        </menu>
-      </nav>
+  <main class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Leaderboard</h2>
+        <table class="leaderboard table table-striped">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Username</th>
+              <th>Points</th>
+              <th>Account Created</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>jag_alskar_surstromming</td>
+              <td>523</td>
+              <td>May 20, 2024</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>mogged</td>
+              <td>302</td>
+              <td>June 2, 2024</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>attilaThePun</td>
+              <td>301</td>
+              <td>July 3, 2024</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-      
-      <hr />
-    </header>
+      <div class="col-md-4">
+        <div class="recommended-box">
+          <h4>Recommended Quizzes</h4>
+          <ul class="Recommended list-group">
+            <li class="recquiz list-group-item">The Seven Years' War</li>
+            <li class="recquiz list-group-item">Napoleon Bonaparte</li>
+            <li class="recquiz list-group-item">Monarchs of France</li>
+            <li class="recquiz list-group-item">The American Revolution</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
 
-    <main>
-      <table class="leaderboard"> <!--database data/possible websocket - updating real time-->
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Username</th>
-            <th>Points</th>
-            <th>Account Created</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>jag_alskar_surstromming</td>
-            <td>523</td>
-            <td>May 20, 2024</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>mogged</td>
-            <td>302</td>
-            <td>June 2, 2024</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>attilaThePun</td>
-            <td>301</td>
-            <td>July 3, 2024</td>
-          </tr>
-        </tbody>
-      </table>
-    </main>
-
-    <footer>
-      <hr />
-      <br />
-      <p>Ryan Russon</p>
-      <a href="https://github.com/RyGuy907/startup">GitHub</a>
-    </footer>
-  </body>
+  <footer>
+    <hr />
+    <p>Ryan Russon</p>
+    <a href="https://github.com/RyGuy907/startup">GitHub</a>
+  </footer>
+</body>
 </html>
