--- a/FrenchRevQuiz.html
+++ b/FrenchRevQuiz.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <div>
-          <input type="text" id="answerBox" placeholder="Answer Here..." />
+          <input type="text" id="answerbox" placeholder="Answer Here..." />
         </div>
         <br>
         <table class="easy" style="display:none;">
@@ -139,7 +139,7 @@
         <table class="comments" style="display:block;">
           <tr>
             <td colspan="3">
-              <input type="text" id="commentBox" placeholder="Type your comment..." />
+              <input type="text" id="comment_box" placeholder="Type your comment..." />
               <button>Comment</button>
             </td>
           </tr>
@@ -156,9 +156,9 @@
         </table>
       </div>
       <div class="col-md-4">
-        <div class="recommended-box">
+        <div class="rec-box">
           <h4>Recommended Quizzes</h4>
-          <ul class="Recommended list-group">
+          <ul class="recquiz list-group">
             <li class="recquiz list-group-item">The Seven Years' War</li>
             <li class="recquiz list-group-item">Napoleon Bonaparte</li>
             <li class="recquiz list-group-item">Monarchs of France</li>
