--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
       <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Random Quiz</a></li>
+        <li><a href="">Random Quiz</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
         <li><a href="profile.html">Profile</a></li>
       </menu>
@@ -36,22 +36,22 @@
       <hr>
       <div class="col-md-8">
         <h2>Quizzes</h2>
-        <ul class="quiz-list">
+        <ul class="qlist">
           <li><a href="FrenchRevQuiz.html">The French Revolution</a></li>
-          <li><a href="#">The Seven Years' War</a></li>
-          <li><a href="#">Napoleon Bonaparte</a></li>
-          <li><a href="#">Monarchs of France</a></li>
-          <li><a href="#">The American Revolution</a></li>
-          <li><a href="#">The Punic Wars</a></li>
-          <li><a href="#">The Gilded Age</a></li>
-          <li><a href="#">Tsarist Russia</a></li>
+          <li><a href="">The Seven Years' War</a></li>
+          <li><a href="">Napoleon Bonaparte</a></li>
+          <li><a href="">Monarchs of France</a></li>
+          <li><a href="">The American Revolution</a></li>
+          <li><a href="">The Punic Wars</a></li>
+          <li><a href="">The Gilded Age</a></li>
+          <li><a href="">Tsarist Russia</a></li>
         </ul>
       </div>
 
       <div class="col-md-4">
-        <div class="recommended-box">
+        <div class="rec-box">
           <h4>Recommended Quizzes</h4>
-          <ul class="Recommended list-group">
+          <ul class="recquiz list-group">
             <li class="recquiz list-group-item">The Seven Years' War</li>
             <li class="recquiz list-group-item">Napoleon Bonaparte</li>
             <li class="recquiz list-group-item">Monarchs of France</li>
