--- a/leaderboard.html
+++ b/leaderboard.html
@@ -18,7 +18,7 @@
     <nav>
       <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Random Quiz</a></li>
+        <li><a href="">Random Quiz</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
         <li><a href="profile.html">Profile</a></li>
       </menu>
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col-md-8">
         <h2>Leaderboard</h2>
-        <table class="leaderboard table table-striped">
+        <table class="leaderboard">
           <thead>
             <tr>
               <th>#</th>
@@ -63,9 +63,9 @@
       </div>
 
       <div class="col-md-4">
-        <div class="recommended-box">
+        <div class="rec-box">
           <h4>Recommended Quizzes</h4>
-          <ul class="Recommended list-group">
+          <ul class="recquiz list-group">
             <li class="recquiz list-group-item">The Seven Years' War</li>
             <li class="recquiz list-group-item">Napoleon Bonaparte</li>
             <li class="recquiz list-group-item">Monarchs of France</li>
