--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
     <nav>
       <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Random Quiz</a></li>
+        <li><a href="">Random Quiz</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
         <li><a href="profile.html">Profile</a></li>
       </menu>
@@ -30,22 +30,20 @@
     <div class="row">
       <div class="col-md-8">
         <h2>Login or Create an Account</h2>
-        <form method="post" class="user-form">
           <div class="mb-3">
-            <label for="email" class="form-label">E-mail:</label>
-            <input type="email" id="email" name="email" class="form-control" placeholder="your@email.com" required>
+            <label for="email" class="label">E-mail:</label>
+            <input type="email" id="email" name="email" placeholder="email">
           </div>
           <div class="mb-3">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="password" required>
+            <label for="password" class="label">Password:</label>
+            <input type="password" id="password" name="password" placeholder="password">
           </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-          <button type="button" class="btn btn-secondary">Create Account</button>
-        </form>
+          <button type="submit" class="button">Login</button>
+          <button type="submit" class="button">Create Account</button>
         <hr />
 
         <h2>Your Profile</h2>
-        <table class="userData table table-striped">
+        <table class="user_data">
           <thead>
             <tr>
               <th>Ranking</th>
@@ -56,9 +54,9 @@
           </thead>
           <tbody>
             <tr>
-              <td>1</td>
+              <td id="points">1</td>
               <td>jag_alskar_surstromming</td>
-              <td>523</td>
+              <td id="points">523</td>
               <td>May 20, 2024</td>
             </tr>
           </tbody>
@@ -66,9 +64,9 @@
       </div>
 
       <div class="col-md-4">
-        <div class="recommended-box">
+        <div class="rec-box">
           <h4>Recommended Quizzes</h4>
-          <ul class="Recommended list-group">
+          <ul class="recquiz list-group">
             <li class="recquiz list-group-item">The Seven Years' War</li>
             <li class="recquiz list-group-item">Napoleon Bonaparte</li>
             <li class="recquiz list-group-item">Monarchs of France</li>
