--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
       <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="">Random Quiz</a></li>
+        <li><a href="#">Random Quiz</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
         <li><a href="profile.html">Profile</a></li>
       </menu>
