--- a/leaderboard.html
+++ b/leaderboard.html
@@ -18,7 +18,7 @@
     <nav>
       <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Random Quiz</a></li>
+        <li><a href="">Random Quiz</a></li>
         <li><a href="leaderboard.html">Leaderboard</a></li>
         <li><a href="profile.html">Profile</a></li>
       </menu>
