--- a/FrenchRevQuiz.html
+++ b/FrenchRevQuiz.html
@@ -159,10 +159,10 @@
         <div class="rec-box">
           <h4>Recommended Quizzes</h4>
           <ul class="recquiz list-group">
-            <li class="recquiz list-group-item">The Seven Years' War</li>
-            <li class="recquiz list-group-item">Napoleon Bonaparte</li>
-            <li class="recquiz list-group-item">Monarchs of France</li>
-            <li class="recquiz list-group-item">The American Revolution</li>
+            <li class="list-group-item">The Seven Years' War</li>
+            <li class="list-group-item">Napoleon Bonaparte</li>
+            <li class="list-group-item">Monarchs of France</li>
+            <li class="list-group-item">The American Revolution</li>
           </ul>
         </div>
       </div>
